openshift-oci/routes/tb-web-ui.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: "2024-04-29T10:33:25Z"
  name: tb-web-ui
  namespace: thingsboard
  resourceVersion: "3596887"
  uid: 65d08530-95de-4264-82b1-c649ed1315b7
spec:
  host: tb-web-ui-thingsboard.apps.ocired12.openshift.local
  port:
    targetPort: http
  to:
    kind: Service
    name: tb-web-ui
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2024-04-29T10:33:25Z"
      status: "True"
      type: Admitted
    host: tb-web-ui-thingsboard.apps.ocired12.openshift.local
    routerCanonicalHostname: router-default.apps.ocired12.openshift.local
    routerName: default
    wildcardPolicy: None
